fix bug where inputs overlap container box in mobile view

--- a/app/assets/stylesheets/checkout.css
+++ b/app/assets/stylesheets/checkout.css
@@ -86,3 +86,9 @@ textarea.LV_invalid_field:active {
     float: none !important;
   }
 }
+
+@media screen and (max-width: 520px) {
+  #order-form textarea, #order-form select {
+    width: 100%;
+  }
+}
